# c-structs

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  build  configure
.github/workflows/: cmake.yml
c/arraylist/: arraylist.h
c/doc/: doxygen.config
c/doc/html/: arraylist_8c.html  arraylist_8h.html  arraylist_8h_source.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  example__arraylist_8c.html  example__linkedlist_8c.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  linkedlist_8c.html  linkedlist_8h.html  linkedlist_8h_source.html  menudata.js  queue_8h_source.html  stack_8c.html  stack_8h.html  stack_8h_source.html  structArrayList__t-members.html  structArrayList__t.html  structLinkedList__t-members.html  structLinkedList__t.html
c/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js
c/doc/latex/: annotated.tex  arraylist_8c.tex  arraylist_8h.tex  dir_bfccd401955b95cf8c75461437045ac0.tex  example__arraylist_8c.tex  example__linkedlist_8c.tex  files.tex  linkedlist_8c.tex  linkedlist_8h.tex  queue_8c.tex  refman.tex  stack_8c.tex  stack_8h.tex  structArrayList__t.tex  structNode.tex
c/example/: Makefile  example_arraylist.c
c/inc/: arraylist.h  linkedlist.h  stack.h
c/lib/: Makefile
c/src/: arraylist.c  linkedlist.c  stack.c
demo/: linkedlist_demo.c
doc/: doxygen.config
doc/html/: annotated.html  arraylist_8h.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bfccd401955b95cf8c75461437045ac0.html  globals.html  globals_type.html  stack_8h.html
doc/html/search/: all_0.js  all_2.js  all_3.js  all_7.js  files_4.js  functions_0.js  functions_1.js  searchdata.js  typedefs_0.js  variables_3.js  variables_4.js  variables_6.js
doc/latex/: arraylist_8c.tex  arraylist_8h.tex  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.tex  linkedlist_8c.tex  queue_8h.tex  stack_8h.tex
docs/: Doxyfile  README_8md.html  annotated.html  autotoc_md0.html  cbuf_8c.html  cbuf_8h.html  cbuf_8h_source.html  classes.html  dir_12802094505cd65c35b88cf0321b2610.html  dir_1be0fa0f746c1f99f8c2a422b60cd7d7.html  dir_20eed651b33f79992004f9c32f7371c8.html  dir_290194ceb602d643d096e8ca469461ce.html  dir_47e3a9897695200b9cdda333cc31187d.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_58331cff4470396bb8c2e6c0de22a8ab.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_5ccf6f5f6f8f5a0c68d52188c0c1e2bd.html  dir_61d1dd4283a9d129620bf55c3c9729d3.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_77219dce7851228c8d04fe09dedfe83e.html  dir_7c62f0bf51ca5c5eb8ede9136de51988.html  dir_8042c794febd6e76313b6901dadcccce.html  dir_a1c6c7ee61423d09659eaf87084cf23e.html  dir_aa05afc042ddde9068d2435769498beb.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_dfecf55c8b0735f1f538e0a071055830.html  dir_e1a715d407a4074a9fa63b2e02ec2b8f.html  dir_e26aadb6420e1aa537e06e66a997ea90.html  dir_e74428771792c83bac1b949a2e16d5b5.html  dir_ea2db1c5c9ef405bfa9ccf9d4f68ec9b.html  dir_ee532ceb613f48f23d20ef02624c3a91.html  dir_f09d564695a8a7f5713b0ef37bdf7d31.html  dir_f45e86d5cfdcf8a6d08b4787631e1538.html  dir_fa7da702cf7913a5421e6f9e819a36e5.html  dir_fc44603e6a261f31cc1edda738d7e5a7.html  dir_fe64ad9c66fdace2c918681c078c63fb.html  error_8h.html  error_8h_source.html  files.html  (+117 more)
docs/html/: arraylist_8h_source.html  classes.html  functions.html  functions_vars.html  linkedlist_8c.html  menudata.js  queue_8c.html  queue_8h.html  stack_8h_source.html  structArrayList__t.html  structNode-members.html  structNode.html
docs/html/search/: all_5.js  all_8.js  all_a.js  classes_0.js  files_3.js  functions_3.js  variables_2.js  variables_7.js
docs/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  stack_8c.tex  structArrayList__t.tex  structLinkedList__t.tex
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js  (+15 more)
example/: arraylist  example_arraylist.c
inc/: .map.h.swp  arraylist.h  bintree.h  cbuf.h  hashmap.h  heap.h  linkedlist.h  list.h  map.h  queue.h  stack.h  vla.h
inc/c-structs/: cbuf.h  hashmap.h  map.h  vla.h
inc/structs/: cbuf.h  error.h  hashmap.h  map.h  ringbuf.h  structs.h  tree.h  util.h  vla.h
src/: .map.c.swp  CMakeLists.txt  arraylist.c  bintree.c  cbuf.c  demo.c  hashmap.c  heap.c  linkedlist.c  list.c  list.c.save  map.c  queue.c  ringbuf.c  stack.c  structs.c  tree.c  vla.c
src/demo/: CMakeLists.txt  demo_cbuf.c  demo_hashmap.c  demo_map.c  demo_tree.c  demo_vla.c  linkedlist_demo.c  list_demo  list_demo.c
tests/: CMakeLists.txt  test_cbuf.cpp  test_cbuf.hpp  test_hashmap.cpp  test_map.cpp  test_map.hpp  test_ringbuf.cpp  test_vla.cpp  test_vla.hpp  util.cpp  util.hpp
